--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
       <div class="container pt-3">
         <div class="row">
           <div class="col-2">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="./index.html">
                 <img src="./images/organi.log" alt="" width="150" height="64">
               </a>
           </div>
@@ -104,28 +104,38 @@
 
 <div class="container mt-5">
   <div class="row">
-    <div class="col">
-      <li>aaaa</li>
-      <li>ssss</li>
-      <li>dddddd</li>
-      <li>ffff</li>
-      <li>ggggg</li>
+    <div class="col-6"><img src="./images/banner-1.jpg" alt="" class="indeximg2"></div>
+    <div class="col-6"><img src="./images/banner-2.jpg" alt="" class="indeximg2"></div>
+  </div>
+</div>
+<div class ="border border-bottom-secondary mt-5 container"></div>
+
+<div class="container mt-5">
+  <div class="row">
+    <div class="col fs-4">
+      <li>Useful Links
+        </li>
+      <li>About Us</li>
+      <li>About Our Shop</li>
+      <li>Our Sitemap</li>
+      <li>Privacy Policy
+      </li>
     </div>
-    <div class="col">
-      <li>aaaa</li>
-      <li>ssss</li>
-      <li>dddddd</li>
+    <div class="col fs-4">
+      <li>Who We Are</li>
+      <li>Our Services</li>
+      <li>Projects</li>
     </div>
-    <div class="col">
-      <li>aaaa</li>
-      <li>ssss</li>
-      <li>dddddd</li>
-      <li>ffff</li>
+    <div class="col fs-4">
+      <li>Contact</li>
+      <li>Innovation</li>
+      <li>Delivery infomation</li>
+      <li>Testimonials</li>
     </div>
   </div>
 </div>
 <div class ="border border-bottom-secondary mt-5 container"></div>
-<div class="container pt-2">@vbsdfgbsjbgsjdbgjdfbgjdbg.dbf</div>
+<div class="container pt-2 fs-4 mb-3">Copyright ©2024 All rights reserved | This template is made with  by Colorlib</div>
 <div class ="border border-bottom-secondary mt-2 container"></div>
 
 
