--- a/client/index.html
+++ b/client/index.html
@@ -101,6 +101,15 @@
     </div>
     <div class ="border border-bottom-secondary mt-5"></div>
 </div>
+<div class="container mt-5">
+  <div class="indexh1 mb-5">Others</div>
+  <div class="row">
+      <div class="col" id="viewdiv3">
+          
+      </div>
+  </div>
+  <div class ="border border-bottom-secondary mt-5"></div>
+</div>
 
 <div class="container mt-5">
   <div class="row">
@@ -135,7 +144,11 @@
   </div>
 </div>
 <div class ="border border-bottom-secondary mt-5 container"></div>
-<div class="container pt-2 fs-4 mb-3">Copyright ©2024 All rights reserved | This template is made with  by Colorlib</div>
+<div class="container pt-2 fs-4 mb-3"></div>
+<div class="container">
+  <div class="row"><div class="col-7">Copyright ©2024 All rights reserved | This template is made with  by Colorlib</div>
+  <div class="col-5"><img src="./images/payment-item.png" alt=""></div></div>
+</div>
 <div class ="border border-bottom-secondary mt-2 container"></div>
 
 
